# lijk-rs

./: .gitignore  Cargo.toml  README.md
netcode_derive/: Cargo.toml
netcode_derive/src/: lib.rs
src/: client.rs  error.rs  main.rs  payload.rs  server.rs  vec2f.rs
src/client/: core.rs  input.rs  mod.rs  socket.rs
src/connection/: local.rs  mod.rs  packet.rs
src/net/: README.md  builtins.rs  client.rs  error.rs  local.rs  mod.rs  opts.rs  packet.rs  remote.rs  socket.rs  storage.rs  task.rs  traits.rs
src/server/: components.rs  core.rs  mod.rs  socket.rs  spawner.rs  world_map.rs
src/server/ai/: mod.rs
src/server/ecs/: component.rs  entity.rs  mod.rs  query.rs  resource.rs  sset.rs  world.rs
src/server/sys/: ai.rs  mod.rs  movement.rs  spawn.rs
src/shared/: box_2d.rs  mod.rs  node.rs  payload.rs  shape.rs  transform.rs
src/utils/: interval.rs  macros.rs  mod.rs  spatial_hash.rs  sset.rs  task.rs  timestep.rs
