[package]
name = "lijk"
version = "0.1.0"
edition = "2024"

[features]
debug_output = []
shared_ip = []    # Allow multiple clients from same IP if different ports.

[profile.dev]
opt-level = 1
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false


[dependencies]
